# TapeCast

./: .env.example  .gitignore  LICENSE  Makefile  README.md  USAGE.md  lectures_batch.txt  podcast.yaml  pyproject.toml  tapecast.sh  test_batch_folder.txt  test_playlist.py  test_playlist2.py  test_urls.txt
tapecast/: __init__.py  __main__.py  batch_loader.py  cli.py  config.py  downloader.py  enhancer.py  exceptions.py  metadata.py  profiles.py  publisher.py  queue.py
tapecast/utils/: __init__.py  audio.py  ffmpeg.py  logger.py  progress.py
tests/: __init__.py
venv312/: pyvenv.cfg
